Added responsive design

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <section class="box-detail">
               <article class="fade-detail">
-                <h3>Casa</h3>
+                <h3>Casas</h3>
                 <h2>Casa en venta en Montmar</h2>
                 <p>
                   CASA INDEPENDIENTE EN MONTEMAR BAJO - CASTELLDEFELS Ubicada en
@@ -43,7 +43,9 @@
                 </p>
                 <div class="box-buttons">
                   <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es">Leer más</a>
+                    <a class="read-more-link" href="https://www.google.es"
+                      >Leer más</a
+                    >
                     <img src="images/arrow-green.png" alt="arrow-right" />
                   </button>
                   <button class="button-promotion">
@@ -64,7 +66,7 @@
             </div>
             <article class="box-detail">
               <div class="fade-detail">
-                <h3>piso</h3>
+                <h3>Pisos</h3>
                 <h2>Piso en venta en Sants</h2>
                 <p>
                   Consta de 3 habitaciones, 1 baño, salón-comedor, cocina
@@ -76,7 +78,9 @@
                 </p>
                 <div class="box-buttons">
                   <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es">Leer más</a>
+                    <a class="read-more-link" href="https://www.google.es"
+                      >Leer más</a
+                    >
                     <img src="images/arrow-green.png" alt="arrow-right" />
                   </button>
                   <button class="button-promotion">
@@ -97,7 +101,7 @@
             </div>
             <article class="box-detail">
               <div class="fade-detail">
-                <h3>Chalet</h3>
+                <h3>Chalets</h3>
                 <h2>Chalet en venta en Bellamar</h2>
                 <p>
                   Accedemos a su interior, a nivel de calle se encuentra el
@@ -109,7 +113,119 @@
                 </p>
                 <div class="box-buttons">
                   <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es">Leer más</a>
+                    <a class="read-more-link" href="https://www.google.es"
+                      >Leer más</a
+                    >
+                    <img src="images/arrow-green.png" alt="arrow-right" />
+                  </button>
+                  <button class="button-promotion">
+                    Reservar
+                    <img src="images/arrow-grey.png" alt="arrow-right" />
+                  </button>
+                </div>
+              </div>
+            </article>
+          </section>
+          <section class="owl-item">
+            <div class="box-img">
+              <img
+                src="images/laredo.avif"
+                alt="Piso en venta en Laredo"
+                class="fade-img"
+              />
+            </div>
+            <article class="box-detail">
+              <div class="fade-detail">
+                <h3>Pisos</h3>
+                <h2>Piso en venta en Laredo</h2>
+                <p>
+                  Recientemente reformado y con detalles muy cuidados. Un piso
+                  preparado para instalarte y comenzar a disfrutar de todas las
+                  ventajas que nos ofrece Laredo. Destaca su ubicación, a
+                  escasos metros del centro y rodeado de todo tipo de servicios
+                  y comodidades. La vivienda cuenta con con tres habitaciones,
+                  un cuarto de baño con bañera, cocina totalmente equipada con
+                  todos los electrodomésticos necesarios y un espacioso salón
+                  comedor.
+                </p>
+                <div class="box-buttons">
+                  <button class="read-more">
+                    <a class="read-more-link" href="https://www.google.es"
+                      >Leer más</a
+                    >
+                    <img src="images/arrow-green.png" alt="arrow-right" />
+                  </button>
+                  <button class="button-promotion">
+                    Reservar
+                    <img src="images/arrow-grey.png" alt="arrow-right" />
+                  </button>
+                </div>
+              </div>
+            </article>
+          </section>
+          <section class="owl-item">
+            <div class="box-img">
+              <img
+                src="images/ballester.avif"
+                alt="Piso en venta en Laredo"
+                class="fade-img"
+              />
+            </div>
+            <article class="box-detail">
+              <div class="fade-detail">
+                <h3>Pisos</h3>
+                <h2>Piso en venta en Ballester</h2>
+                <p>
+                  Primer piso, sin ascensor, con dos dormitorios dobles, uno
+                  individual, cocina independiente, baño, salón con salida a
+                  balcón acristalado y lavandería... todo es perfecto estado de
+                  conservación, listo para entrar a vivir!!! Aire acondicionado,
+                  calefacción central de gas ciudad, tarima, puertas macizas,
+                  aluminio climalit... son algunos de los acabados de esta
+                  práctica vivienda de la población.
+                </p>
+                <div class="box-buttons">
+                  <button class="read-more">
+                    <a class="read-more-link" href="https://www.google.es"
+                      >Leer más</a
+                    >
+                    <img src="images/arrow-green.png" alt="arrow-right" />
+                  </button>
+                  <button class="button-promotion">
+                    Reservar
+                    <img src="images/arrow-grey.png" alt="arrow-right" />
+                  </button>
+                </div>
+              </div>
+            </article>
+          </section>
+          <section class="owl-item">
+            <div class="box-img">
+              <img
+                src="images/castelldefels.avif"
+                alt="Piso en venta en Castelldefels"
+                class="fade-img"
+              />
+            </div>
+            <article class="box-detail">
+              <div class="fade-detail">
+                <h3>Pisos</h3>
+                <h2>Piso en venta en Castelldefels</h2>
+                <p>
+                  reformada con elegancia y clase, diseñada con amplios y
+                  luminosos espacios orientados a mar, para contemplar unas
+                  maravillosas vistas sobre nuestro Mediterráneo. A pie de
+                  calle, junto al paseo marítimo, accedemos a su parcela
+                  ajardinada y a la privilegiada terraza a nivel del salón. En
+                  su interior, nos recibe un amplio salón comedor que nos da
+                  paso a la gran cocina office abierta, presidida por una isla
+                  central, y a un aseo de cortesía.
+                </p>
+                <div class="box-buttons">
+                  <button class="read-more">
+                    <a class="read-more-link" href="https://www.google.es"
+                      >Leer más</a
+                    >
                     <img src="images/arrow-green.png" alt="arrow-right" />
                   </button>
                   <button class="button-promotion">
