fix sintaxis error

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="owl-carousel owl-theme owl-loaded">
       <div class="owl-stage-outer">
         <div class="owl-stage">
-          <div class="owl-item">
+          <section class="owl-item">
             <div class="box-img">
               <img
                 src="images/montmar.avif"
@@ -29,8 +29,8 @@
                 class="fade-img"
               />
             </div>
-            <section class="box-detail">
-              <article class="fade-detail">
+            <article class="box-detail">
+              <div class="fade-detail">
                 <h3>Casas</h3>
                 <h2>Casa en venta en Montmar</h2>
                 <p>
@@ -42,20 +42,22 @@
                   naturaleza.
                 </p>
                 <div class="box-buttons">
-                  <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es"
-                      >Leer más</a
-                    >
+                  <a
+                    class="read-more"
+                    href="https://www.google.es"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Leer más
                     <img src="images/arrow-green.png" alt="arrow-right" />
-                  </button>
+                  </a>
                   <button class="button-promotion">
                     Reservar
                     <img src="images/arrow-grey.png" alt="arrow-right" />
                   </button>
                 </div>
-              </article>
-            </section>
-          </div>
+              </div>
+            </article>
+          </section>
           <section class="owl-item">
             <div class="box-img">
               <img
@@ -77,12 +79,14 @@
                   Ministerio de Justicia.
                 </p>
                 <div class="box-buttons">
-                  <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es"
-                      >Leer más</a
-                    >
+                  <a
+                    class="read-more"
+                    href="https://www.google.es"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Leer más
                     <img src="images/arrow-green.png" alt="arrow-right" />
-                  </button>
+                  </a>
                   <button class="button-promotion">
                     Reservar
                     <img src="images/arrow-grey.png" alt="arrow-right" />
@@ -112,12 +116,14 @@
                   chimenea y salida a terraza.
                 </p>
                 <div class="box-buttons">
-                  <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es"
-                      >Leer más</a
-                    >
+                  <a
+                    class="read-more"
+                    href="https://www.google.es"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Leer más
                     <img src="images/arrow-green.png" alt="arrow-right" />
-                  </button>
+                  </a>
                   <button class="button-promotion">
                     Reservar
                     <img src="images/arrow-grey.png" alt="arrow-right" />
@@ -149,12 +155,14 @@
                   comedor.
                 </p>
                 <div class="box-buttons">
-                  <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es"
-                      >Leer más</a
-                    >
+                  <a
+                    class="read-more"
+                    href="https://www.google.es"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Leer más
                     <img src="images/arrow-green.png" alt="arrow-right" />
-                  </button>
+                  </a>
                   <button class="button-promotion">
                     Reservar
                     <img src="images/arrow-grey.png" alt="arrow-right" />
@@ -185,12 +193,14 @@
                   práctica vivienda de la población.
                 </p>
                 <div class="box-buttons">
-                  <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es"
-                      >Leer más</a
-                    >
+                  <a
+                    class="read-more"
+                    href="https://www.google.es"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Leer más
                     <img src="images/arrow-green.png" alt="arrow-right" />
-                  </button>
+                  </a>
                   <button class="button-promotion">
                     Reservar
                     <img src="images/arrow-grey.png" alt="arrow-right" />
@@ -222,12 +232,14 @@
                   central, y a un aseo de cortesía.
                 </p>
                 <div class="box-buttons">
-                  <button class="read-more">
-                    <a class="read-more-link" href="https://www.google.es"
-                      >Leer más</a
-                    >
+                  <a
+                    class="read-more"
+                    href="https://www.google.es"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Leer más
                     <img src="images/arrow-green.png" alt="arrow-right" />
-                  </button>
+                  </a>
                   <button class="button-promotion">
                     Reservar
                     <img src="images/arrow-grey.png" alt="arrow-right" />
